# dump1090-exporter

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml  release-please-config.json  renovate.json
.github/: settings.yml
.github/workflows/: ci.yml  lint.yml  pr-title.yml  release-please.yml  release.yml  renovate-uv-shas.yml  scorecard.yml  security.yml
demo/: docker-compose.yml
grafana-dashboard/: dump1090.json
src/dump1090exporter/: __init__.py  __main__.py  exporter.py  metrics.py
tests/: test_cli.py  test_exporter.py  test_exporter_units.py  test_math.py  test_metrics.py
tools/: update-uv-shas.sh
