[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "dump1090exporter"
dynamic = ["version"]
description = "A Prometheus metrics exporter for the dump1090 Mode S decoder for RTLSDR."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Schuby", email = "schubydoo@users.noreply.github.com" },
]
maintainers = [
    { name = "Schuby", email = "schubydoo@users.noreply.github.com" },
]
keywords = ["prometheus", "monitoring", "metrics", "dump1090", "ADSB"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "aiohttp>=3.10",
    "aioprometheus[aiohttp]>=23.12.0",
]

[project.optional-dependencies]
uvloop = ["uvloop>=0.20"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.10",
    "pre-commit>=4.0",
]

[project.scripts]
dump1090exporter = "dump1090exporter.__main__:main"

[project.urls]
Homepage = "https://github.com/schubydoo/dump1090-exporter"
Repository = "https://github.com/schubydoo/dump1090-exporter"
Issues = "https://github.com/schubydoo/dump1090-exporter/issues"

[tool.hatch.version]
path = "src/dump1090exporter/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "src/dump1090exporter",
    "tests",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dump1090exporter"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
    "C4",   # flake8-comprehensions
    "S",    # flake8-bandit (security)
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # pytest uses bare `assert`
]

[tool.mypy]
python_version = "3.11"
files = ["src/dump1090exporter"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["dump1090exporter"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
